force-app/main/default/objects/CG_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_JSON__c</fullName>
        <label>Duration JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_Formula__c</fullName>
        <formula>TEXT(Type__c)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COIAnnual</fullName>
                    <label>COI Annual</label>
                </value>
                <value>
                    <fullName>COIMassAcknowledge</fullName>
                    <label>COI Mass Acknowledge</label>
                </value>
                <value>
                    <fullName>CGNewEmployee</fullName>
                    <label>CG New Employee</label>
                </value>
                <value>
                    <fullName>CGAnnual</fullName>
                    <label>CG Annual</label>
                </value>
                <value>
                    <fullName>CGManual</fullName>
                    <label>New CG Manual</label>
                </value>
                <value>
                    <fullName>ResendAnnual</fullName>
                    <label>Resend (Annual)</label>
                </value>
                <value>
                    <fullName>Annual</fullName>
                    <label>COI &amp; CG Annual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CG Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CGS-{000}</displayFormat>
        <label>CG Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Annual</fullName>
        <active>true</active>
        <label>Annual</label>
    </recordTypes>
    <recordTypes>
        <fullName>CG_Annual</fullName>
        <active>true</active>
        <label>CG Annual</label>
    </recordTypes>
    <recordTypes>
        <fullName>CG_Manual</fullName>
        <active>true</active>
        <label>CG Manual</label>
    </recordTypes>
    <recordTypes>
        <fullName>CG_New_Employee</fullName>
        <active>true</active>
        <label>CG New Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>COI_Annual</fullName>
        <active>true</active>
        <label>COI Annual</label>
    </recordTypes>
    <recordTypes>
        <fullName>COI_Mass</fullName>
        <active>true</active>
        <label>COI Mass</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resend_Annual</fullName>
        <active>true</active>
        <label>Resend Annual</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>